FOSDEM adjust :export: tags
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -262,7 +262,7 @@ XDP/eBPF can integrate/offload Open vSwitch (OVS) in many ways
  - *Offloading subset to XDP* (issue miss BPF-helpers to work)
  - *AF_XDP*, huge performance gain
 
-* Slide: AF_XDP                                                     :export:
+* Slide: AF_XDP                                                      :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
@@ -273,7 +273,7 @@ XDP/eBPF can integrate/offload Open vSwitch (OVS) in many ways
 file:af_xdp.png
 
 
-* Performance                                            :export:
+* Performance                                                        :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
@@ -356,23 +356,22 @@ A native AF_XDP driver would be more efficient
   * E.g. NAPI is not doing busy-polling 100%, more latency variance
 
 
-** Slide: Ongoing work                                                :export:
+** Slide: Ongoing work                                              :export:
 
  - Upstreaming performance optimizations
  - Libbpf: facilitating adoption
  - Packet clone for XDP
 
 
-** Slide: Summary
+** Slide: Summary                                                   :export:
 
  - Summarize the presentation
 
 
-* Backup Slides                                            :export:
+* Backup Slides                                                      :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
-
 
 ** Slide: Where does AF_XDP performance come from?                  :export:
 
@@ -396,7 +395,7 @@ AF_XDP /socket/: Associated /two rings/ *RX* and *TX*
  - FILL ring: application gives kernel area to RX fill
  - COMPLETION ring: kernel tell app TX done for area (can be reuse)
 
-** Slide: Gotcha by RX-queue id binding
+** Slide: Gotcha by RX-queue id binding                             :export:
 
 AF_XDP bound to */single RX-queue id/* (for SPSC performance reasons)
 - NIC default spread flows with RSS-hashing over RX-queues
