--- a/conference/FOSDEM2019/slides_examples.org
+++ b/conference/FOSDEM2019/slides_examples.org
@@ -44,7 +44,7 @@ Tables can also be exported in a slide
 
 Execute python code in emacs via keyboard shortcut: =C-c C-c=
 
-#+BEGIN_SRC python :var fname="example-1.svg" :var data=data01 :results file
+#+BEGIN_SRC python :var fname="images/example-1.svg" :var data=data01 :results file
 import matplotlib.pyplot as plt
 import matplotlib as mpl
 mpl.rcParams['figure.figsize'] = [8.0+4.9, 4.5]
@@ -62,11 +62,11 @@ return fname
 #+END_SRC
 
 #+RESULTS:
-[[file:example-1.svg]]
+[[file:images/example-1.svg]]
 
 * Slide: Example-1                                                   :export:
 
-file:example-1.svg
+[[file:images/example-1.svg]]
 
 Not much room for describing the figure
 
@@ -75,7 +75,7 @@ Not much room for describing the figure
 
 Execute python code in emacs via keyboard shortcut: =C-c C-c=
 
-#+BEGIN_SRC python :var fname="bar_chart.svg" :var data=data01 :results file
+#+BEGIN_SRC python :var fname="images/example-bar_chart.svg" :var data=data01 :results file
 import matplotlib.pyplot as plt
 import matplotlib as mpl
 import numpy as np
@@ -107,12 +107,12 @@ return fname
 #+END_SRC
 
 #+RESULTS:
-[[file:bar_chart.svg]]
+[[file:images/example-bar_chart.svg]]
 
 
 * Slide: Example-2: Bar Chart                                        :export:
 
-file:bar_chart.svg
+[[file:images/example-bar_chart.svg]]
 
 Bar chart for AF_XDP RX-drop without touching data
 
@@ -124,7 +124,7 @@ Matplotlib charts can create horizontal bar charts.
 
 Execute python code in emacs via keyboard shortcut: =C-c C-c=
 
-#+BEGIN_SRC python :var fname="bar_chart_horizontal.svg" :var data=data01 :results file
+#+BEGIN_SRC python :var fname="images/example-bar_chart_horizontal.svg" :var data=data01 :results file
 import matplotlib.pyplot as plt; plt.rcdefaults()
 import matplotlib as mpl
 import numpy as np
@@ -148,11 +148,11 @@ return fname
 #+END_SRC
 
 #+RESULTS:
-[[file:bar_chart_horizontal.svg]]
+[[file:images/example-bar_chart_horizontal.svg]]
 
 * Slide: Example-3: Bar Chart Horizontal                             :export:
 
-file:bar_chart_horizontal.svg
+[[file:images/example-bar_chart_horizontal.svg]]
 
 Bar Chart Horizontal for RX-drop with AF_XDP
 
@@ -168,7 +168,7 @@ Bar Chart Horizontal for RX-drop with AF_XDP
 
 * Example-4: Python
 
-#+BEGIN_SRC python :var fname="solutions_compare.svg" :var data=data02 :results file
+#+BEGIN_SRC python :var fname="images/example-solutions_compare.svg" :var data=data02 :results file
 import matplotlib.pyplot as plt
 import matplotlib as mpl
 import numpy as np
@@ -222,12 +222,12 @@ return fname
 #+END_SRC
 
 #+RESULTS:
-[[file:solutions_compare.svg]]
+[[file:images/example-solutions_compare.svg]]
 
 
 * Slide: Example-4: Comparison against DPDK                          :export:
 
-file:solutions_compare.svg
+[[file:images/example-solutions_compare.svg]]
 
 Compare AF_XDP against DPDK performance
 
