FOSDEM provide ref for performance optimizations done
The slides doesn't mention were these performance optimizations
came from, the just suddenly appear, as pointed out by Ilias.

These actually comes from Magnus and Bjørn talk at LPC2018
 http://vger.kernel.org/lpc-networking2018.html#session-11

We don't have time to cover these, instead add a link to LPC2018 resources.

Reported-by: Ilias Apalodimas <ilias.apalodimas@linaro.org>
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -297,6 +297,8 @@ XDP/eBPF can integrate/offload Open vSwitch (OVS) in many ways
 
 [[file:images/results_opt.png]]
 
+Details see LPC2018 talk: [[http://vger.kernel.org/lpc-networking2018.html#session-11][The Path to DPDK speeds for AF_XDP]]
+# - Primarily about avoiding Spectre Retpoline calls
 
 ** Slide: Two ways of running an AF_XDP application                 :export:
 
