Slide: Performance Linux 4.20
Add a single line to slides, that explains it.  Magnus is obviously
going to say something more.  Also want to prep audiance for next slide
where we show a huge improvement, on top of these numbers.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -292,6 +292,7 @@ XDP/eBPF can integrate/offload Open vSwitch (OVS) in many ways
 
 [[file:images/results_4.20.png]]
 
+*/Huge/* /improvement/ compared to AF_PACKET, more optimizations in pipeline
 
 ** Slide: Performance with Optimization Patches                     :export:
 
