--- a/xdp-project.org
+++ b/xdp-project.org
@@ -202,7 +202,17 @@ leveraging it for your specific use-case.
 
 More details to be posted later.
 
+** DONE NetDev-conf presentation/Tutorial got accepted
+CLOSED: [2019-01-28 Mon 13:00]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2019-01-28 Mon 13:00]
+:END:
+Title: "XDP hands-on tutorial"
+Subject: [Indico] Abstract Acceptance notification (#48)
 ** NEXT Prepare materials for XDP tutorial
 DEADLINE: <2019-03-20 Wed>
 [2019-02-04 Mon 12:33]
 [[notmuch:id:43977d45-857f-87ef-07d5-553868882008@mojatatu.com][Email from Jamal Hadi Salim: XDP tutorial]]
+** NEXT NetDev-conf: add abstract under XDP-project
+** NEXT NetDev-conf: create overall plan for tutorial
+
