Add: Project cpumap top-section
Tasks related to cpumap to be filed under this section.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/cpumap.org
+++ b/areas/cpumap.org
@@ -30,3 +30,7 @@ populate the appropriate SKB-fields. This work is currently stalled on a
 generic way to transfer info needed for the SKB-fields, this related to XDP
 *metadata* and *BTF* working areas.
 
+* TODO Project cpumap
+
+Tasks related to =cpumap= are filed under this section.
+
