--- a/areas/cpumap.org
+++ b/areas/cpumap.org
@@ -40,6 +40,10 @@ The =cpumap= does not handle redirect for generic-XDP.  This have already
 confused people.  For completeness this should be fixed, but there is also
 an opportunity for performance improvements.
 
+** TODO Feature: cpumap could use netif_receive_skb_list()
+
+** TODO Feature: cpumap implement GRO handling
+
 ** TODO Create BPF helper for skb_set_queue_mapping
 
 When doing CPUMAP redirect, then the SKB created have no =skb->queue_mapping=
