Remove some items from brainstorm.org covered in xdp-project.org
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/xdp-project.org
+++ b/xdp-project.org
@@ -91,7 +91,9 @@ Red Hat QA, got very confused by #2.
 
 ** NEXT Change sample programs to accept ifnames as well as indexes
 
-** NEXT Add TX counters to sample programs
+** NEXT Add TX counters to redirect samples/bpf programs
+
+Simply include/sample the net_device TX stats.
 
 ** TODO Fix unloading wrong XDP on xdp-sample exit
 
